@@ -1751,11 +1751,7 @@ class LaTeXTranslator(SphinxTranslator):
             linenos = node.get('linenos', False)
             highlight_args = node.get('highlight_args', {})
             highlight_args['force'] = node.get('force', False)
-            if lang == self.config.highlight_language:
-                # only pass highlighter options for original language
-                opts = self.config.highlight_options
-            else:
-                opts = {}
+            opts = self.config.highlight_options.get(lang, {})
 
             hlcode = self.highlighter.highlight_block(
                 node.rawsource, lang, opts=opts, linenos=linenos,
