@@ -1,0 +1,4 @@
+highlight_options = {
+    'default': {'default_option': True},
+    'python': {'python_option': True}
+}
