@@ -1,0 +1,14 @@
+test-highlight_options
+======================
+
+.. code-block::
+
+   blah blah blah
+
+.. code-block:: python
+
+   blah blah blah
+
+.. code-block:: java
+
+   blah blah blah
